<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/btn0Label"
        android:id="@+id/btn0"
        android:layout_gravity="center_horizontal"
        android:background="#ffc7dbf0"
        android:width="200dp"
        android:onClick="showToast"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/btn1Label"
        android:id="@+id/btn1"
        android:layout_gravity="center_horizontal"
        android:background="#ffc7dbf0"
        android:width="200dp"
        android:onClick="showToast"
        android:layout_below="@id/btn0"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/btn2Label"
        android:id="@+id/btn2"
        android:layout_gravity="center_horizontal"
        android:background="#ffc7dbf0"
        android:width="200dp"
        android:onClick="showToast"
        android:layout_below="@id/btn1"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/btn3Label"
        android:id="@+id/btn3"
        android:layout_gravity="center_horizontal"
        android:background="#ffc7dbf0"
        android:width="200dp"
        android:onClick="showToast"
        android:layout_below="@id/btn2"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/btn4Label"
        android:id="@+id/btn4"
        android:layout_gravity="center_horizontal"
        android:background="#ffc7dbf0"
        android:width="200dp"
        android:onClick="showToast"
        android:layout_below="@id/btn3"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/btn5Label"
        android:id="@+id/btn5"
        android:layout_gravity="center_horizontal"
        android:background="#ffa5c1f0"
        android:width="200dp"
        android:onClick="showToast"
        android:layout_below="@id/btn4"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>


</RelativeLayout>
